--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -61,3 +61,9 @@ section.post-actions {
 		right: 0.5em $i;
 	}
 }
+
+// full width YT
+
+.mobile-device .lazyYT.lazyYT-container {
+	max-width: unset;
+}
